--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FAQ Component</title>
-  <link rel="stylesheet" href="/css/style.css">
-  <script src="javascript/main.js" defer></script>
+  <link rel="stylesheet" href="https://fabioaes.github.io/faq_component/css/style.css">
+  <script src="https://fabioaes.github.io/faq_component/javascript/main.js" defer></script>
 </head>
 <body>
    <main>
       <div class="box_one">
         <div class="title"> 
            <h3>How Does it work.</h3> 
-           <img src="/assets/expand_more.svg" alt="">
+           <img src="https://raw.githubusercontent.com/fabioaes/faq_component/ec824d84955fda462ae8ac48e7f07405e3fecb80/assets/expand_more.svg" alt="">
         </div>
         <div class="text">
          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis id illum sed dolores. Mollitia, nihil?</p>
@@ -22,7 +22,7 @@
       <div class="box_two">
         <div class="title"> 
            <h3>Where can I find about Funding?</h3> 
-           <img src="/assets/expand_more.svg" alt="">
+           <img src="https://raw.githubusercontent.com/fabioaes/faq_component/ec824d84955fda462ae8ac48e7f07405e3fecb80/assets/expand_more.svg" alt="">
         </div>
         <div class="text">
          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis id illum sed dolores. Mollitia, nihil?</p>
@@ -31,7 +31,7 @@
       <div class="box_three">
         <div class="title"> 
            <h3>What are other pricing options?</h3> 
-           <img src="/assets/expand_more.svg" alt="">
+           <img src="https://raw.githubusercontent.com/fabioaes/faq_component/ec824d84955fda462ae8ac48e7f07405e3fecb80/assets/expand_more.svg" alt="">
         </div>
         <div class="text">
          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis id illum sed dolores. Mollitia, nihil?</p>
@@ -40,7 +40,7 @@
       <div class="box_four">
          <div class="title"> 
             <h3>What are other pricing options?</h3> 
-            <img src="/assets/expand_more.svg" alt="">
+            <img src="https://raw.githubusercontent.com/fabioaes/faq_component/ec824d84955fda462ae8ac48e7f07405e3fecb80/assets/expand_more.svg" alt="">
          </div>
          <div class="text">
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis id illum sed dolores. Mollitia, nihil?</p>
